<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_PalletRecord" Id="{597e51a1-ffe2-4efb-a8b6-87d7e8d47825}">
    <Declaration><![CDATA[TYPE ST_PalletRecord :
STRUCT
	ID				: STRING;
	Data			: ARRAY[1..100] OF STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>