<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_ActuatorCommand" Id="{8bd2e1d0-b114-40c9-b40d-b62b4f2aaa1e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ActuatorCommand :
(
	None 		:= 0,
	Home		:= 1,
	Work		:= 2
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>