<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_AxisCommand" Id="{6fec8041-a1a7-4c00-98d0-d6e0fbcc3102}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AxisCommand :
(
	None 				:= 0,
	TurnOn				:= 1,
	TurnOff				:= 2,
	ExecuteMoveAbs		:= 3,
	ExecuteMoveVel		:= 4,
	Stop				:= 5
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>