<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_GantryCommand" Id="{3662df4c-18db-435f-bfb5-d56e8864118a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_GantryCommand :
(
	None 			:= 0,
	TurnOn			:= 1,
	TurnOff			:= 2,
	Pick			:= 3,
	Place			:= 4,
	Home			:= 5,
	Abort			:= 6
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>