<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_GantryState" Id="{c3bef0ca-6c38-4189-8990-3dbba39def43}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_GantryState :
(
	Idle 			:= 0,
	TurningOn		:= 1,
	TurningOff		:= 2,
	Ready			:= 3,
	Picking			:= 4,
	Placing			:= 5,
	Homing			:= 6,
	Aborting		:= 7
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>